[package]
name = "doclytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ollama-rs = "0.1.7"
reqwest = {version = "0.11.24", features = ["json"]}
serde_json = "1.0.114"
serde = "1.0.197"
substring = "1.4.5"
slog = "2.7"
slog-term = "2.8"
slog-async = "2.7"
slog-json = "2.4"
slog-scope = "4.4"
slog-stdlog = "4.1"
lazy_static = "1.4"

