[package]
name = "doclytics"
version = "1.1.4-rc.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
ollama-rs = "0.1.9"
reqwest = {version = "0.12.4", features = ["json"]}
serde_json = "1.0.116"
serde = "1.0.200"
substring = "1.4.5"
slog = "2.7"
slog-term = "2.8"
slog-async = "2.7"
slog-json = "2.4"
slog-scope = "4.4"
slog-stdlog = "4.1"
lazy_static = "1.4"
chrono = "0.4.38"

